--- a/szeyap-api/requirements.txt
+++ b/szeyap-api/requirements.txt
@@ -15,6 +15,7 @@ httpx==0.27.0
 idna==3.7
 inflection==0.5.1
 itsdangerous==2.2.0
+jieba==0.42.1
 Jinja2==3.1.4
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
@@ -36,3 +37,4 @@ uvloop==0.20.0
 watchfiles==0.23.0
 websockets==12.0
 Werkzeug==3.0.3
+wordfreq==3.1.1
